--- a/src/style.css
+++ b/src/style.css
@@ -359,7 +359,7 @@ body {
     color: #00FFD1;
 }
 
-/* ИСПРАВЛЕННОЕ игровое поле - 2x4 на всю доступную площадь */
+/* Оптимизированное игровое поле - сетка 2x4 */
 #game-field {
     flex: 1;
     display: grid;
@@ -419,16 +419,22 @@ body {
     opacity: 0.7;
     cursor: pointer;
     display: block;
+    max-width: 100%;
+    max-height: 100%;
     justify-self: center;
     align-self: center;
-    max-width: 90%;
-    max-height: 90%;
 }
 
 .member-img:hover {
     filter: hue-rotate(0) brightness(1.2);
     transform: scale(1.1);
     opacity: 1;
+}
+
+/* Удаляем старые grid-area назначения, так как они могут мешать */
+#game-field > .member-img:nth-child(n),
+#game-field > div:nth-child(n) {
+    grid-area: auto;
 }
 
 /* Animation keyframes for background elements */
